@@ -127,6 +127,13 @@ public class FrivilligController implements Initializable{
 
 //            String ansP = Main.hashList.getPersons().get(ansLine).indexOf(ansLine;
 //            String ansPhoneL= Main.hashList.searchName(ansLine).get(Integer.parseInt(ansP)).getPhonenumber();
+            String ansvarlig = Main.hashList.getBodHash().get(bodBox.getValue()).getAnsvarlig();
+            int antalMedNavn = Main.hashList.getPersons().get(ansvarlig).size();
+            for(int i = 0; i < antalMedNavn; i++){
+                if(Main.hashList.getPersons().get(Main.hashList.getBodHash().get(bodBox.getValue()).getAnsvarlig()).get(i).getRole().equals("Ansvarlig")){
+                    String ansPhone = Main.hashList.getPersons().get(Main.hashList.getBodHash().get(bodBox.getValue()).getAnsvarlig()).get(i).getPhonenumber();
+                }
+            }
 
             pendingVagt = dayLine+","+bodLine+","+locLine+","+timeLine+","+ansLine;
             submitVagt subVagt =new submitVagt(dayLine, bodLine,locLine,timeLine,ansLine);
@@ -172,8 +179,9 @@ public class FrivilligController implements Initializable{
        List<String> fileContents = new ArrayList<>();
        FileWriter filewriter;
        try {
-           String filePath = new File("").getAbsolutePath();
-           Path path = Paths.get(filePath.concat("/src/main/resources/com/example/rfui/pendingVagter.txt"));
+           Path path = Path.of(Main.hashList.getPathToPendingBod().toString() + "/" +
+                   bodBox.getValue().replaceAll("[^a-zA-Z0-9]", "") + ".txt");
+
            long count = Files.lines(path).count();
            for (int j = 0; j < count; j++) {
                String line = Files.readAllLines(path).get(j);
@@ -182,7 +190,7 @@ public class FrivilligController implements Initializable{
                }
            }
            fileContents.addAll(tableContents);
-           filewriter = new FileWriter(filePath.concat("/src/main/resources/com/example/rfui/pendingVagter.txt"),false);
+           filewriter = new FileWriter(path.toString(),false);
            BufferedWriter bw = new BufferedWriter(filewriter);
            for(String fileLine: fileContents){
                bw.write(fileLine+System.lineSeparator());
@@ -316,8 +324,7 @@ public class FrivilligController implements Initializable{
     }
     public void comboBox(){
         try {
-            String filePath = new File("").getAbsolutePath();
-            Path path = Paths.get(filePath.concat("/src/main/resources/com/example/rfui/boder.txt"));
+            Path path = Main.hashList.getPathToBoder();
 
             long count = Files.lines(path).count();
             for (int i = 0; i < count; i++) {
